--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -40,3 +40,8 @@ h2{
     flex-direction: column;
     padding: 1%;
 }
+@media only screen and (max-width: 950px) {
+    .service{
+        width: 100%;
+    }
+}
